@@ -1,3 +1,7 @@
+2019-11-11  Richard Sandiford  <richard.sandiford@arm.com>
+
+	* gcc.dg/vect/pr92420.c: New test.
+
 2019-11-11  Claudiu Zissulescu <claziss@gmail.com>
 
 	* gcc.target/arc/delay-slot-limm.c: New test.
