@@ -1,3 +1,10 @@
+2019-11-11  Richard Sandiford  <richard.sandiford@arm.com>
+
+	PR tree-optimization/92420
+	* tree-vect-stmts.c (get_negative_load_store_type): Move further
+	up file.
+	(get_group_load_store_type): Use it for reversed SLP accesses.
+
 2019-11-11  Jan Hubicka  <hubcika@ucw.cz>
 
 	* ipa-prop.c (ipa_propagate_indirect_call_infos): Remove ipcp
